# middleware/auth.js
@@ -1,4 +1,6 @@
+const { revokedTokens } = require("../controllers/auth.controller");
 const UnauthenticatedError = require("../errors/unauthenticated");
+const ForbiddenError = require("../errors/forbidden");
 const jwt = require("jsonwebtoken");
 
 const authMiddleware = async (req, res, next) => {
@@ -11,6 +13,11 @@ const authMiddleware = async (req, res, next) => {
   }
 
   const extractToken = authorization.split(" ")[1];
+
+  // Check if token is not revoked yet
+  if (revokedTokens.includes(extractToken)) {
+    throw new ForbiddenError("Forbidden: Token has been revoked");
+  }
 
   try {
     const payload = jwt.verify(extractToken, process.env.JWT_SECRET);
