# routes/auth.route.js
@@ -1,9 +1,10 @@
 const express = require("express");
 const router = express.Router();
 
-const { register, login } = require("../controllers/auth.controller");
+const { register, login, logout } = require("../controllers/auth.controller");
 
 router.post("/register", register);
 router.post("/login", login);
+router.post("/logout", logout);
 
 module.exports = router;
