# swagger.yaml
@@ -60,6 +60,23 @@ paths:
       deprecated: false
       security: []
     parameters: []
+
+  /auth/logout:
+    post:
+      tags:
+        - Auth
+      summary: Logout User
+      operationId: LogoutUser
+      parameters: []
+      responses:
+        "200":
+          description: ""
+          headers: {}
+      deprecated: false
+      security:
+        - bearer: []
+    parameters: []
+
   /products:
     get:
       tags:
